network/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
spec:
  backend:
    serviceName: proxy
    servicePort: 80
