network/access-backend.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: access-backend
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: proxy
      ports:
      - protocol: tcp
        port: 80
