network/access-frontend.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: access-frontend
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: proxy
      ports:
      - protocol: tcp
        port: 80
